<resources>
    <string name="app_name">EzBarber</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="not_registered">Not registered?</string>
    <string name="register_here">Register Here</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to Login</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="date_selected">Date Selected:</string>
    <string name="time_selected">Time Selected:</string>
    <string name="confirm_appointment">Confirm Appointment</string>
    <string name="available_appointments">Available Appointments:</string>
    <string name="menu">Menu</string>
    <string name="hair_services">Hair Services</string>
    <string name="blow_dry">Blow Dry</string>
    <string name="from_50">From 50$</string>
    <string name="from_55">From 55$</string>
    <string name="blow_dry_with_curling">Blow Dry with curling</string>
    <string name="hair_cut_with_blow_dry">Hair Cut with Blow Dry</string>
    <string name="from_65">From 65$</string>
    <string name="men_hair_cut">Men Hair Cut</string>
    <string name="from_40">From 40$</string>
    <string name="color">Color</string>
    <string name="basic_tint">Basic Tint</string>
    <string name="full_highlights">Full Highlights</string>
    <string name="from_100">From 100$</string>
    <string name="from_75">From 75$</string>
    <string name="texturizing">Texturizing</string>
    <string name="perms">Perms</string>
    <string name="relaxers">Relaxers</string>
    <string name="my_appointments">My Appointments</string>
    <string name="calendar">Calendar</string>
    <string name="about_us">About Us</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="select_treatment">Select Treatment:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_time">select time</string>
    <string name="select_date">select date</string>
    <string name="separator">---------------------------------------------------------------</string>
    <string name="aboutUs">Address</string>
    <string name="fullAddress">Katzenelson st. 65, Givatayim</string>
    <string name="openingSchedule">Sunday, Tuesday – Thursday 08:00 – 18:00\nFriday 07:30 – 14:30</string>
    <string name="goBack">return</string>
    <string name="partial_highlights">Partial Highlights</string>
    <string name="gloss">Gloss</string>
    <string name="availability">Availability</string>
    <string name="logo">logo</string>
</resources>