<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_myAppointments"
            android:title="@string/my_appointments"
            android:icon="@drawable/scissors_icon"/>

        <item
            android:id="@+id/nav_calendar"
            android:title="@string/calendar"
            android:icon="@drawable/calendar_icon"/>

        <item
            android:id="@+id/nav_aboutUs"
            android:title="@string/about_us"
            android:icon="@drawable/info_icon"/>

        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            android:icon="@drawable/settings_icon"/>

        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/logout_icon"/>
    </group>
<!--    android:onClick="signOut"-->

</menu>