<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sahara"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".Activities.MonthActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calendar_BTN_logout"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/logout"
            android:textSize="13sp"
            app:icon="@drawable/logout_icon" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calendar_BTN_details"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:text="@string/about_us"
            android:textSize="13sp"
            app:icon="@drawable/info_icon" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calendar_BTN_date"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/select_date"
        app:icon="@drawable/calendar_icon" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/date_selected"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/calendar_selecteddate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calendar_BTN_time"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/select_time"
        app:icon="@drawable/calendar_time_icon" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/time_selected"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/calendar_selectedhour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/select_treatment"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/calendar_spinner"
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calendar_BTN_confirm"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/confirm_appointment"
        app:icon="@drawable/ic_check_24" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/my_appointments"
        android:textSize="25sp"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/list_frame"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/grey" />
</androidx.appcompat.widget.LinearLayoutCompat>
